// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OfficialFeedbackPost /> renders correctly for admin 1`] = `
<OfficialFeedbackPost
  editingAllowed={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  last={false}
  locale="en"
  officialFeedbackPost={
    Object {
      "attributes": Object {
        "author_multiloc": Object {
          "en": "Testing Official Department",
        },
        "body_multiloc": Object {
          "en": "Update: Do Not Keep Calm, please panic now. End of transmission.",
        },
        "created_at": "2012-01-01T04:06:07.000Z",
        "updated_at": "2011-01-01T04:26:07.000Z",
      },
      "id": "feedbackId1",
      "type": "official_feedbacks",
    }
  }
  tenantLocales={
    Array [
      "en",
      "nl-BE",
    ]
  }
/>
`;

exports[`<OfficialFeedbackPost /> renders correctly for non-admin 1`] = `
<OfficialFeedbackPost
  editingAllowed={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  last={false}
  locale="en"
  officialFeedbackPost={
    Object {
      "attributes": Object {
        "author_multiloc": Object {
          "en": "Testing Official Department",
        },
        "body_multiloc": Object {
          "en": "Update: Do Not Keep Calm, please panic now. End of transmission.",
        },
        "created_at": "2012-01-01T04:06:07.000Z",
        "updated_at": "2011-01-01T04:26:07.000Z",
      },
      "id": "feedbackId1",
      "type": "official_feedbacks",
    }
  }
  tenantLocales={
    Array [
      "en",
      "nl-BE",
    ]
  }
/>
`;
